--- a/static/style/main.css
+++ b/static/style/main.css
@@ -38,8 +38,8 @@ body {
     padding-top: 50px;
     min-height: 100vh;
     width: 100vw;
-    background: url("../images/dark-bg.jpg");
-    background-size: 100%
+    background: url("../images/dark-bg.jpg") ;
+    background-size: 100%;
   }
 
   #home h1 {
@@ -108,12 +108,12 @@ body {
 
   .float-left { 
     float: left; 
-    width: 60vw;
+    width: 65vw;
   }
 
   .float-right {
     float: right;
-    width: 30vw;
+    width: 35vw;
   }
 
   .card {
@@ -121,9 +121,9 @@ body {
     border: #00000000;
     display:inline-block;
     text-align: center;
-    margin-left: 3vw;
-    margin-right: 3vw;
-    width: 7vw;
+    margin-left: 2vw;
+    margin-right: 2vw;
+    width: 9vw;
   }
 
   .card-body {
