--- a/static/style/main.css
+++ b/static/style/main.css
@@ -89,6 +89,22 @@ body {
     padding-top:50px;
   }
 
+  #projects .card-deck {
+    margin-left: 40px;
+    margin-right: 40px;
+    text-align: left;
+    width: 70vw;
+  }
+
+  #projects .card {
+    width: 33vw;
+  }
+
+  #projects .card-title {
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 16pt;
+  }
+
 
   /* Section 3: Skills */
 
@@ -178,5 +194,12 @@ body {
   #contact p {
     font-family: 'Source Sans Pro', sans-serif;
     font-size: 19pt;
+    text-align: center;
+  }
+
+
+  #project-header h1 {
+    margin-left: auto;
+    margin-top: 30px;
     text-align: center;
   }
