changed font of heading

--- a/static/style/main.css
+++ b/static/style/main.css
@@ -41,7 +41,7 @@ body {
   }
 
   #home h1 {
-    font-family: 'Yatra One', cursive;
+    font-family: 'Caprasimo', cursive;
     font-size: 72pt;
     margin-top: 20vh;
     text-align: center;
