--- a/static/style/main.css
+++ b/static/style/main.css
@@ -2,6 +2,7 @@
 
 body {
     position: relative; 
+    max-width: 100vw;
   }
 
   h1 {
@@ -122,17 +123,17 @@ body {
     display:inline-block;
     margin: auto;
     text-align: center;
-    width: 100vw;
+    width: 99vw;
   }
 
   .float-left { 
     float: left; 
-    width: 55vw;
+    width: 59vw;
   }
 
   .float-right {
     float: right;
-    width: 45vw;
+    width: 40vw;
   }
 
   .card {
